--- a/web/Admin/leave.xhtml
+++ b/web/Admin/leave.xhtml
@@ -1,17 +1,17 @@
-<?xml version='1.0' encoding='UTF-8' ?>
+.<?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
        <title>COF EMS</title>
     <!-- Bootstrap Styles-->
-    <link href="resources/css/bootstrap.css" rel="stylesheet" />
+    <link href="../resources/css/bootstrap.css" rel="stylesheet" />
     <!-- FontAwesome Styles-->
-    <link href="resources/css/font-awesome.css" rel="stylesheet" />
+    <link href="../resources/css/font-awesome.css" rel="stylesheet" />
     <!-- Morris Chart Styles-->
-    <link href="resources/js/morris/morris-0.4.3.min.css" rel="stylesheet" />
+    <link href="../resources/js/morris/morris-0.4.3.min.css" rel="stylesheet" />
     <!-- Custom Styles-->
-    <link href="resources/css/custom-styles.css" rel="stylesheet" />
+    <link href="../resources/css/custom-styles.css" rel="stylesheet" />
        <script src="resources/js/loader.js"></script>
 <script type="text/javascript">
 $(window).load(function() {
@@ -384,23 +384,23 @@ $(window).load(function() {
     <!-- /. WRAPPER  -->
     <!-- JS Scripts-->
     <!-- jQuery Js -->
-    <script src="resources/js/jquery-1.10.2.js"></script>
+    <script src="../resources/js/jquery-1.10.2.js"></script>
     <!-- Bootstrap Js -->
-    <script src="resources/js/bootstrap.min.js"></script>
+    <script src="../resources/js/bootstrap.min.js"></script>
 	 
     <!-- Metis Menu Js -->
-    <script src="resources/js/jquery.metisMenu.js"></script>
+    <script src="../resources/js/jquery.metisMenu.js"></script>
     <!-- Morris Chart Js -->
-    <script src="resources/js/morris/raphael-2.1.0.min.js"></script>
-    <script src="resources/js/morris/morris.js"></script>
+    <script src="../resources/js/morris/raphael-2.1.0.min.js"></script>
+    <script src="../resources/js/morris/morris.js"></script>
 	
 	
-	<script src="resources/js/easypiechart.js"></script>
-	<script src="resources/js/easypiechart-data.js"></script>
+	<script src="../resources/js/easypiechart.js"></script>
+	<script src="../resources/js/easypiechart-data.js"></script>
 	
 	
     <!-- Custom Js -->
-    <script src="resources/assets/js/custom-scripts.js"></script>
+    <script src="../resources/assets/js/custom-scripts.js"></script>
 
 
     </h:body>
